--- a/tests/test.html
+++ b/tests/test.html
@@ -8,38 +8,13 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <link rel="stylesheet" href="main.css">
-    <title>ARTscene: Denver</title>
+    <link rel="stylesheet" href="test.css">
+    <title>test</title>
 </head>
 
 <body>
-
-    <script>
-
-    </script>
-
-    <!--
-      Below we include the Login Button social plugin. This button uses
-      the JavaScript SDK to present a graphical Login button that triggers
-      the FB.login() function when clicked.
-    -->
-
-
-
-    <div id="status">
-    </div>
-
-
-
-
-
-
-
-
-
-
-    <nav class="container">
-        <h1 class="title ">artSHIT</h1>
+<nav class="container">
+        <h1 class="title ">OPEN</h1>
     </nav>
 
 
@@ -84,7 +59,7 @@
 
     <script async defer src="//maps.googleapis.com/maps/api/js?key=AIzaSyCzn87EZTOCxMbvqqozbGHTTfSNIEFGJMc&callback=initMap">
     </script>
-    <script src="FBmain.js"></script>
+    <script src="../scripts/fbInit.js"></script>
 
 </body>
 
