monday morning commit

--- a/events.html
+++ b/events.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-    
     <nav>
         <div class="nav-wrapper red darken-2">
             <a href="index.html" class="brand-logo">OPEN: ArtScene / Denver</a>
@@ -33,6 +32,21 @@
             </ul>
         </div>
     </nav>
+
+    <ul class="collapsible popout" data-collapsible="accordion">
+        <li>
+            <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+        </li>
+        <li>
+            <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+        </li>
+        <li>
+            <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+        </li>
+    </ul>
 
     <script src="scripts/app.js"></script>
 </body>
