--- a/places.html
+++ b/places.html
@@ -206,7 +206,8 @@
         </div>
     </div>
 
-
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+<script src="scripts/fbInit.js"></script>
     <script src="scripts/mapinit.js"></script>
     <script async defer src="//maps.googleapis.com/maps/api/js?key=AIzaSyB9eU1NQ3c6M_yPUTvuR1yBeKjeT9wPvmU&callback=initMap"></script>
     <script src="scripts/app.js"></script>
