--- a/tests/test.html
+++ b/tests/test.html
@@ -26,7 +26,7 @@
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
     </fb:login-button>
 
-    <script src="../scripts/fbinit.js"></script>
+    <script src="../scripts/fbInit.js"></script>
 
 </body>
 
