--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
     <nav>
         <div class="nav-wrapper red darken-2">
             <a href="index.html" class="brand-logo">OPEN: ArtScene / Denver</a>
@@ -34,6 +34,8 @@
         </div>
     </nav>
 
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>    
+<script src="scripts/fbInit.js"></script>
     <script src="scripts/app.js"></script>
 </body>
 
