styles maps various things working better

--- a/indexspa.html
+++ b/indexspa.html
@@ -48,7 +48,9 @@
                 <li><a href="#about">ABOUT</a></li>
             </ul>
             <h2 id="today" class="header">TODAY</h2></h2>
-            <ul class="collapsible popout daily-events" data-collapsible="accordion"></ul>
+            <!-- <ul class="collapsible popout daily-events" data-collapsible="accordion"></ul> -->
+            <br>
+            <ul class="daily-events"</ul>
         </div>
     </div>
 
