end of day most features operational

--- a/indexspa.html
+++ b/indexspa.html
@@ -90,21 +90,21 @@
          <div class="row">
            <div class="col l6 s12">
              <h2 id="about" class="header">ABOUT</h2>
-             <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+             <p class="grey-text text-lighten-4">OPEN takes (in our opinion) the 20 best art organizations in Denver and pulls together all their posted events from facebook. Questions? Comments? Think we left something out?  <a href="mailto:open.artscene.denver.com" target="_top">send us an email</a></p>
            </div>
            <div class="col l4 offset-l2 s12">
              <ul>
-                 <li><a href="#home">HOME</a></li>
-                 <li><a href="#today">TODAY</a></li>
-                 <li><a href="#places">PLACES</a></li>
-                 <li><a href="#upcoming">UPCOMING</a></li>
+                 <li><a href="#home" style="color:white;">HOME</a></li>
+                 <li><a href="#today" style="color:yellow;">TODAY</a></li>
+                 <li><a href="#places" style="color:red;">PLACES</a></li>
+                 <li><a href="#upcoming" style="color:royalblue;">UPCOMING</a></li>
              </ul>
            </div>
          </div>
        </div>
        <div class="footer-copyright">
          <div class="container">
-         © 2014 Copyright Text
+         © 2017
          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
          </div>
        </div>
