map markers working sorta

--- a/indexspa.html
+++ b/indexspa.html
@@ -52,6 +52,9 @@
             <br>
             <ul class="daily-events"</ul>
         </div>
+        <div class="outofboundsalert">
+            note: events outside Denver core will not appear on map<br>
+        </div>
     </div>
 
     <div class="parallax-container">
