--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 
-    <link rel="stylesheet" href="styles/mainspa.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
 
     <title>OPEN</title>
 </head>
 
 <body>
+
     <div id="fb-root"></div>
 
-    <div id="login-splash">
+    <render></render>
 
-    <br><br><br>
-        right here:
-        <div class="fb-login-button" data-width="500" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
     </div>
-    <render>
 
-    </render>
+    <div id="login-splash">
+        <br><br><br> right here:
+        <div class="fb-login-button" data-width="100" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
+
+    </div>
 
     <div id="actual-site">
         <div class="section black nav-wrapper">
@@ -36,28 +42,28 @@
                 <li><a class="waves-effect waves-light btn white " href="#about" style="color:black;">ABOUT</a></li>
                 <li><a class="waves-effect waves-light btn blue" href="#upcoming">UPCOMING</a></li>
                 <li><a class="waves-effect waves-light btn red" href="#places" style="color:yellow;">PLACES</a></li>
-                <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:royalblue;">TODAY</a></li>
+                <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:#2196f3;">TODAY</a></li>
             </ul>
 
             <h1 id="home" class="header">OPEN</h1>
         </div>
 
-        <section class="splash">
+        <section class="map-section">
             <div id="map"></div>
         </section>
 
         <div class="section yellow">
             <div class="row container ">
                 <div class="each-section-header-nav">
+                    <h2 id="today" class="header">TODAY</h2>
                     <ul class="section-nav today-nav">
                         <li><a href="#home">HOME</a></li>
                         <li><a href="#places">PLACES</a></li>
                         <li><a href="#upcoming">UPCOMING</a></li>
                         <li><a href="#about">ABOUT</a></li>
                     </ul>
-                    <h2 id="today" class="header">TODAY</h2>
+
                 </div>
-                <!-- <ul class="collapsible popout daily-events" data-collapsible="accordion"></ul> -->
 
                 <br>
                 <h3 id="no-events"><br>nothing happening today <br><br>
@@ -95,7 +101,7 @@
                     <li><a href="#places">PLACES</a></li>
                     <li><a href="#about">ABOUT</a></li>
                 </ul>
-                <h2 id="upcoming" class="header">UPCOMING</h2></h2>
+                <h2 id="upcoming" class="header">UPCOMING</h2>
                 <ul class="collapsible popout upcoming-events" data-collapsible="accordion"></ul>
             </div><br>
         </div>
@@ -105,48 +111,32 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <h2 id="about" class="header">ABOUT</h2>
-                        <p class="grey-text text-lighten-4">OPEN takes (in our opinion) the 20 best art organizations in Denver and pulls together all their posted events from facebook. Questions? Comments? Think we left something out? <a href="mailto:open.artscene.denver.com" target="_top">send us an email</a></p>
+                        <p class="grey-text text-lighten-4">OPEN takes (in our opinion) the 20 best art organizations in Denver and pulls together all their posted events from facebook. Questions? Comments? Think we left something out? <br><a href="mailto:open.artscene.denver.com" target="_top">send us an email</a></p>
                     </div>
                     <div class="col l4 offset-l2 s12">
                         <ul>
                             <li><a href="#home" style="color:white;">HOME</a></li>
                             <li><a href="#today" style="color:yellow;">TODAY</a></li>
                             <li><a href="#places" style="color:red;">PLACES</a></li>
-                            <li><a href="#upcoming" style="color:royalblue;">UPCOMING</a></li>
-                            <li><a href="#" style="color:white;" id="logOut">LOG OUT</a></li>
+                            <li><a href="#upcoming" style="color:#2196f3;">UPCOMING</a></li>
                         </ul>
-                        <div class="fb-login-button" data-width="500" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
+                        <div class="fb-login-button" data-width="100" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
+                        </div>
+                </div>
+                <div class="footer-copyright" style="text-align:center;">
+                    <div class="container">
+                        for more info about the Denver Art Scene visit
+                        <a class="text-lighten-4" href="http://onegoodeyeonline.com/" >One Good Eye Online</a>
                     </div>
                 </div>
-            </div>
-            <div class="footer-copyright">
-                <div class="container">
-                    © 2017
-                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-                </div>
-            </div>
         </footer>
-    </div>
-
-    <!-- <script type="text/template" id="login">
-        <div class="login-splash">
-            hi
-            <div class="fb-login-button" data-width="500" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
-
-
-            <br><br><br><br><br><br>
-
-
         </div>
-    </script> -->
 
-
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
-    <script src="scripts/fbinit.js"></script>
-    <script src="scripts/mapinit.js"></script>
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB9eU1NQ3c6M_yPUTvuR1yBeKjeT9wPvmU"></script>
-    <script src="scripts/app.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+        <script src="scripts/fb.js"></script>
+        <script src="scripts/mapinit.js"></script>
+        <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB9eU1NQ3c6M_yPUTvuR1yBeKjeT9wPvmU"></script>
+        <script src="scripts/app.js"></script>
 </body>
 
 </html>
