--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
@@ -20,7 +21,6 @@
 
     <div id="fb-root"></div>
 
-    <render></render>
 
     <div id="loader-wrapper">
         <div id="loader"></div>
@@ -28,41 +28,51 @@
         <div class="loader-section section-right"></div>
     </div>
 
-    <div id="login-splash">
-        <br><br><br> right here:
-        <div class="fb-login-button" data-width="100" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
 
+
+
+
+    <div id="login-splash">
+
+        <img src="images/gallery6splash.JPG"  alt="" class="splash-bg">
+
+        <a id="login-button" class="waves-effect waves-light btn-large fb-login-button black" ><i class="material-icons right"></i>login with fb</a>
     </div>
 
-    <div id="actual-site">
-        <div class="section black nav-wrapper">
 
-            <ul class="right hide-on-med-and-down section-nav today-nav">
+
+
+
+    <div id="actual-site">
+        <section id="main-container">
+
+
+        <div class="section black main-nav">
+            <h1 id="home" class="header">OPEN</h1>
+            <ul class="right  main-nav-buttons">
                 <!-- <ul class="section-nav today-nav"> -->
                 <li><a class="waves-effect waves-light btn white " href="#about" style="color:black;">ABOUT</a></li>
                 <li><a class="waves-effect waves-light btn blue" href="#upcoming">UPCOMING</a></li>
                 <li><a class="waves-effect waves-light btn red" href="#places" style="color:yellow;">PLACES</a></li>
                 <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:#2196f3;">TODAY</a></li>
             </ul>
-
-            <h1 id="home" class="header">OPEN</h1>
         </div>
 
         <section class="map-section">
             <div id="map"></div>
+            <img src="images/gallery9.jpg"  alt="" class="splash-bg">
         </section>
 
         <div class="section yellow">
             <div class="row container ">
                 <div class="each-section-header-nav">
-                    <h2 id="today" class="header">TODAY</h2>
                     <ul class="section-nav today-nav">
                         <li><a href="#home">HOME</a></li>
                         <li><a href="#places">PLACES</a></li>
                         <li><a href="#upcoming">UPCOMING</a></li>
                         <li><a href="#about">ABOUT</a></li>
                     </ul>
-
+                     <h2 id="today" class="header">TODAY</h2>
                 </div>
 
                 <br>
@@ -81,10 +91,10 @@
         <div class="section red">
             <div class="row container">
                 <ul class="section-nav ">
-                    <li><a href="#about">ABOUT</a></li>
                     <li><a href="#home">HOME</a></li>
-                    <li><a href="#upcoming">UPCOMING</a></li>
                     <li><a href="#today">TODAY</a></li>
+                    <li><a href="#upcoming">UPCOMING</a></li>
+                    <li><a href="#about">ABOUT</a></li>
                 </ul>
                 <h2 id="places" class="header">PLACES</h2></h2>
                 <ul class="collapsible events-list" data-collapsible="accordion"></ul>
@@ -111,7 +121,7 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <h2 id="about" class="header">ABOUT</h2>
-                        <p class="grey-text text-lighten-4">OPEN takes (in our opinion) the 20 best art organizations in Denver and pulls together all their posted events from facebook. Questions? Comments? Think we left something out? <br><a href="mailto:open.artscene.denver.com" target="_top">send us an email</a></p>
+                        <p class="grey-text text-lighten-4">OPEN takes (in our opinion) the 20 best art organizations in Denver and pulls together all their posted events from facebook. Questions? Comments? Think we left something out? <br><a href="mailto:open.artscene.denver.com" target="_top" style="color:red;">send us an email</a></p>
                     </div>
                     <div class="col l4 offset-l2 s12">
                         <ul>
@@ -119,9 +129,10 @@
                             <li><a href="#today" style="color:yellow;">TODAY</a></li>
                             <li><a href="#places" style="color:red;">PLACES</a></li>
                             <li><a href="#upcoming" style="color:#2196f3;">UPCOMING</a></li>
+                            <li><a href="" id="logout-button" style="color:white;">LOGOUT</a></li>
                         </ul>
-                        <div class="fb-login-button" data-width="100" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
-                        </div>
+
+
                 </div>
                 <div class="footer-copyright" style="text-align:center;">
                     <div class="container">
@@ -129,7 +140,9 @@
                         <a class="text-lighten-4" href="http://onegoodeyeonline.com/" >One Good Eye Online</a>
                     </div>
                 </div>
+                <br>
         </footer>
+        </section>
         </div>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
