--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <h1 id="home" class="header">OPEN</h1>
             <ul class="right  main-nav-buttons">
                 <!-- <ul class="section-nav today-nav"> -->
-                <li><a class="waves-effect waves-light btn white " href="#about" style="color:black;">ABOUT</a></li>
-                <li><a class="waves-effect waves-light btn blue" href="#upcoming">UPCOMING</a></li>
-                <li><a class="waves-effect waves-light btn red" href="#places" style="color:yellow;">PLACES</a></li>
-                <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:#2196f3;">TODAY</a></li>
+                <li><a class="waves-effect waves-light btn white " href="#about" id="main-nav-about" style="color:black;">ABOUT</a></li>
+                <li><a class="waves-effect waves-light btn blue" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
+                <li><a class="waves-effect waves-light btn red" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
+                <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
             </ul>
         </div>
 
