--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="parallax-container">
-                    <div class="parallax"><img src="images/gallery8.jpg"></div>
+                    <div class="parallax"><img src="images/gallery8.JPG"></div>
                 </div>
 
                 <div class="section red">
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="parallax-container">
-                    <div class="parallax"><img src="images/gallery4.jpg"></div>
+                    <div class="parallax"><img src="images/gallery4.JPG"></div>
                 </div>
 
                 <div class="section blue">
@@ -153,7 +153,7 @@
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
             <script src="scripts/fb.js"></script>
-            <script src="scripts/mapinit.js"></script>
+            <script src="scripts/mapInit.js"></script>
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9eU1NQ3c6M_yPUTvuR1yBeKjeT9wPvmU"></script>
             <script src="scripts/app.js"></script>
     </body>
