some extra site functionality, several tests all passing

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <h2 id="today" class="header">TODAY</h2>
                         </div>
                         <h3 id="no-events"><br>nothing happening today <br><br></h3>
-                        <ul class="daily-events" </ul>
+                        <ul class="daily-events"> </ul>
                     </div>
                     <div class="outofboundsalert">
                         note: events outside local Denver will not appear on map<br>
