closing branch for refactor

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                         </h1>
                     </div>
                      <ul class="side-nav" id="mobile-demo">
-                         <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
-                         <li><a class="waves-effect waves-light btn red" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
+                         <li><a class="waves-effect waves-light btn yellow" class="today" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
+                         <li><a class="waves-effect waves-light btn red" class="places" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
                          <li><a class="waves-effect waves-light btn blue" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
-                         <li><a class="waves-effect waves-light btn black" href="#about" id="main-nav-about" style="color:white;">ABOUT</a></li>
+                         <li><a class="waves-effect waves-light btn black" class="about" href="#about" id="main-nav-about" style="color:white;">ABOUT</a></li>
                      </ul>
                     <ul class=" main-nav-buttons">
-                        <li><a class="waves-effect waves-light btn yellow" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
-                        <li><a class="waves-effect waves-light btn red" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
+                        <li><a class="waves-effect waves-light btn yellow" class="today" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
+                        <li><a class="waves-effect waves-light btn red" class="places" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
                         <li><a class="waves-effect waves-light btn blue" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
-                        <li><a class="waves-effect waves-light btn white " href="#about" id="main-nav-about" style="color:black;">ABOUT</a></li>
+                        <li><a class="waves-effect waves-light btn white " class="about" href="#about" id="main-nav-about" style="color:black;">ABOUT</a></li>
                     </ul>
                 </div>
 
@@ -81,10 +81,10 @@
                     <div class="row container ">
                         <div class="each-section-header-nav">
                             <ul class="section-nav today-nav">
-                                <li><a href="#home">HOME</a></li>
-                                <li><a href="#places">PLACES</a></li>
+                                <li><a class="home" href="#home">HOME</a></li>
+                                <li><a class="places" href="#places">PLACES</a></li>
                                 <li><a href="#upcoming">UPCOMING</a></li>
-                                <li><a href="#about">ABOUT</a></li>
+                                <li><a class="about" href="#about">ABOUT</a></li>
                             </ul>
                             <h2 id="today" class="header">TODAY</h2>
                         </div>
@@ -103,10 +103,10 @@
                 <div class="section red">
                     <div class="row container">
                         <ul class="section-nav ">
-                            <li><a href="#home">HOME</a></li>
-                            <li><a href="#today">TODAY</a></li>
+                            <li><a class="home" href="#home">HOME</a></li>
+                            <li><a class="today" href="#today">TODAY</a></li>
                             <li><a href="#upcoming">UPCOMING</a></li>
-                            <li><a href="#about">ABOUT</a></li>
+                            <li><a class="about" href="#about">ABOUT</a></li>
                         </ul>
                         <h2 id="places" class="header">PLACES</h2>
                         <ul class="collapsible galleries-list" data-collapsible="accordion"></ul>
@@ -120,10 +120,10 @@
                 <div class="section blue">
                     <div class="row container">
                         <ul class="section-nav upcoming-nav">
-                            <li><a href="#home">HOME</a></li>
-                            <li><a href="#today">TODAY</a></li>
-                            <li><a href="#places">PLACES</a></li>
-                            <li><a href="#about">ABOUT</a></li>
+                            <li><a class="home" href="#home">HOME</a></li>
+                            <li><a class="today" href="#today">TODAY</a></li>
+                            <li><a class="places" href="#places">PLACES</a></li>
+                            <li><a class="about" href="#about">ABOUT</a></li>
                         </ul>
                         <h2 id="upcoming" class="header">UPCOMING</h2>
                         <ul class="collapsible popout upcoming-events" data-collapsible="accordion"></ul>
@@ -140,9 +140,9 @@
                             <div class="col l4 offset-l2 s12">
                                 <br><br>
                                 <ul>
-                                    <li><a href="#home" style="color:white;">HOME</a></li>
-                                    <li><a href="#today" style="color:yellow;">TODAY</a></li>
-                                    <li><a href="#places" style="color:red;">PLACES</a></li>
+                                    <li><a class="home" href="#home" style="color:white;">HOME</a></li>
+                                    <li><a class="today" href="#today" style="color:yellow;">TODAY</a></li>
+                                    <li><a class="places" href="#places" style="color:red;">PLACES</a></li>
                                     <li><a href="#upcoming" style="color:#2196f3;">UPCOMING</a></li>
                                     <li><a href="" id="logout-button" style="color:white;">LOGOUT</a></li>
                                 </ul>
